--- a/terraform/assets/argocd-root-app.yaml
+++ b/terraform/assets/argocd-root-app.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-app
+  name: root
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: "https://github.com/sudores/40acres-test-task.git"
-    targetRevision: main
-    path: "."
+    targetRevision: master
+    path: "argocd/apps"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: default
