--- a/argocd/apps/ingress.yaml
+++ b/argocd/apps/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginx-ingress
   namespace: argocd
 spec:
-  project: harness
+  project: default
   source:
     repoURL: https://kubernetes.github.io/ingress-nginx
     chart: ingress-nginx
