--- a/argocd/apps/prometheus-operator.yaml
+++ b/argocd/apps/prometheus-operator.yaml
@@ -16,7 +16,7 @@ spec:
             storageSpec:
               volumeClaimTemplate:
                 spec:
-                  storageClassName: local-path
+                  storageClassName: standard
                   accessModes: ["ReadWriteOnce"]
                   resources:
                     requests:
