--- a/argocd/apps/nginx-ingress.yaml
+++ b/argocd/apps/nginx-ingress.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://kubernetes.github.io/ingress-nginx
     chart: ingress-nginx
-    targetRevision: 5.8.0
+    targetRevision: 4.13.2
     helm:
       values: |
         controller:
@@ -21,7 +21,7 @@ spec:
             enabled: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: ingress-nginx
+    namespace: nginx-ingress
   syncPolicy:
     automated:
       prune: true
