--- a/argocd/charts/bitcoind/templates/statefulset.yaml
+++ b/argocd/charts/bitcoind/templates/statefulset.yaml
@@ -27,6 +27,10 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       priorityClassName: {{ .Values.priorityClassName | default "" }}
       {{- with .Values.imagePullSecrets }}
