Added sleep command

--- a/argocd/charts/bitcoind/templates/statefulset.yaml
+++ b/argocd/charts/bitcoind/templates/statefulset.yaml
@@ -27,16 +27,14 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       priorityClassName: {{ .Values.priorityClassName | default "" }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+
+      command: ["sleep", "3000"
 
       serviceAccountName: {{ include "bitcoin.serviceAccountName" . }}
       securityContext:
