--- a/argocd/apps/bitcoind.yaml
+++ b/argocd/apps/bitcoind.yaml
@@ -40,6 +40,10 @@ spec:
           accessMode: ReadWriteOnce
           size: 2Gi
           storageClass: standard
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 1000
+          fsGroup: 1000
 
         resources:
           requests:
