--- a/argocd/charts/bitcoind/templates/statefulset.yaml
+++ b/argocd/charts/bitcoind/templates/statefulset.yaml
@@ -39,6 +39,9 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       initContainers:
         - name: fix-permissions
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
           image: busybox
           command: ["sh", "-c", "mkdir -p /data/.bitcoin && chown -R 1000:1000 /data/.bitcoin"]
           volumeMounts:
