--- a/argocd/charts/bitcoind/values.yaml
+++ b/argocd/charts/bitcoind/values.yaml
@@ -51,14 +51,13 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext:
-  fsGroup: 1000
+podSecurityContext: null
 
 securityContext:
   readOnlyRootFilesystem: true
-  runAsNonRoot: true
-  runAsUser: 1000
-  runAsGroup: 1000
+  runAsNonRoot: false
+  runAsUser: 0
+  runAsGroup: 0
 
 resources:
   # limits:
