--- a/argocd/charts/bitcoind/templates/statefulset.yaml
+++ b/argocd/charts/bitcoind/templates/statefulset.yaml
@@ -45,6 +45,7 @@ spec:
       {{- toYaml .Values.sidecarContainers | nindent 8 }}
       {{- end }}
         - name: {{ .Chart.Name }}
+          working_dir: /bitcoin/.bitcoin
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
