--- a/argocd/charts/bitcoind/values.yaml
+++ b/argocd/charts/bitcoind/values.yaml
@@ -54,7 +54,7 @@ podAnnotations: {}
 podSecurityContext: null
 
 securityContext:
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   runAsNonRoot: false
   runAsUser: 0
   runAsGroup: 0
