--- a/argocd/apps/prometheus-operator.yaml
+++ b/argocd/apps/prometheus-operator.yaml
@@ -27,7 +27,7 @@ spec:
             storage:
               volumeClaimTemplate:
                 spec:
-                  storageClassName: local-path
+                  storageClassName: standard
                   accessModes: ["ReadWriteOnce"]
                   resources:
                     requests:
